--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,15 @@
         "ABESEC",
         "AKTU",
         "Ghaziabad",
+        "Jayanti",
         "Kalam",
+        "Maha",
+        "Panchami",
         "Pradesh",
-        "Uttar"
+        "Ravidas",
+        "Shivaratri",
+        "Shivratri",
+        "Uttar",
+        "vasant"
     ]
 }
