shivani pal.html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Panchami",
         "Pradesh",
         "Ravidas",
+        "Shivani",
         "Shivaratri",
         "Shivratri",
         "Uttar",
